packages/fuel-indexer-tests/trybuild/fail_if_non_function_patterns_included_in_module.stderr
error: Unsupported item in indexer module 'Item::Mod { attrs: [], vis: Visibility::Inherited, unsafety: None, mod_token: Mod, ident: Ident { ident: "some_disallowed_module", span: #0 bytes(139..161) }, content: Some((Brace, [])), semi: None }'.
 --> trybuild/fail_if_non_function_patterns_included_in_module.rs
  |
  | #[indexer(manifest = "packages/fuel-indexer-tests/trybuild/simple_wasm.yaml")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `indexer` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
 --> trybuild/fail_if_non_function_patterns_included_in_module.rs
  |
  | }
  |  ^ consider adding a `main` function to `$DIR/trybuild/fail_if_non_function_patterns_included_in_module.rs`
